# morcin

./: .gitignore  Nowy dokument tekstowy.txt  README.md  compose.yaml  tak.R
Dockerized/: .dockerignore  README.md  compose.yaml  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt
Dockerized/DB/: Dockerfile  data.py  init.sql
Dockerized/Flask/: Dockerfile  app.py
Dockerized/app/: Dockerfile  app.py  discover.py  edit.py  init.sql  recognize.py
Dockerized/app/db/: curiosity.json  data.py  env.py
Dockerized/app/model/: class_indices.npy  ml.py  training_history.npy
Dockerized/app/model/metrics/: metrics.txt
Dockerized/kubernetes/: 00_namespace.yaml  01-resourcequota.yaml  02-mysql-secret.yaml  03-app-configmap.yaml  04-mysql-stateful-set.yaml  05-mysql-headless-svc.yaml  06-phpmyadmin-deployment.yaml  07-phpmyadmin-svc.yaml  08-app-deployment.yaml  09-app-svc.yaml  10-app-hpa.yaml  11-ingress.yaml  12-network.yaml  README.md  run.sh
Weterynarz/: ui.R
Weterynarz/CSS/: styles.css
Wetwpy/: app.py  discover.py  recognize.py  ui.py
Wetwpy/DB/: curiosity.json  db.py
Wetwpy/Dockerized/: docker-compose.yml
Wetwpy/Dockerized/DB/: Dockerfile  app.py  data.py  init_db.py  init_db.sql
Wetwpy/Dockerized/Flask/: app.py  requirements.txt
Wetwpy/Dockerized/app/: discover.py  edit.py  requirements.txt  ui.py
Wetwpy/app/: app.py  edit.py  recognize.py
Wetwpy/app/model/: model.py
