[project]
name = "dockerized"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "mysql-connector-python>=9.5.0",
    "numpy>=2.3.4",
    "pillow>=11.3.0",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
]
